# bazel-runfiles-are-an-approximation

./: BUILD.bazel  MODULE.bazel  README.md  boring_rule.bzl  conflict_free_symlinks_binary.bzl  multiplatform_transition.bzl  naive_binary.bzl  smart_binary.bzl
platform/: BUILD.bazel
